// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render complex alerts 1`] = `
"<h1>Example</h1>
<div class="markdown-alert markdown-alert-note"><i class="fa fa-note-sticky"></i>
<p class="markdown-alert-title">Note</p>
<p>Highlights information that users should take into account, even when skimming.</p>
</div>
<div class="markdown-alert markdown-alert-tip"><i class="fa fa-lightbulb"></i>
<p class="markdown-alert-title">Tip</p>
<p>Optional information to help a user be more successful.</p>
</div>
<div class="markdown-alert markdown-alert-important"><i class="fa fa-circle-exclamation"></i>
<p class="markdown-alert-title">Important</p>
<p>Crucial information necessary for users to succeed.</p>
</div>
<div class="markdown-alert markdown-alert-warning"><i class="fa fa-triangle-exclamation"></i>
<p class="markdown-alert-title">Warning</p>
<p>Critical content demanding immediate user attention due to potential risks.</p>
</div>
<div class="markdown-alert markdown-alert-caution"><i class="fa fa-bolt"></i>
<p class="markdown-alert-title">Caution</p>
<p>Negative potential consequences of an action.</p>
</div>
<hr>
<h2>Nestable</h2>
<p>Nested within other elements.</p>
<div class="markdown-alert markdown-alert-note"><i class="fa fa-note-sticky"></i>
<p class="markdown-alert-title">Note</p>
<p>This is a note</p>
<blockquote>
<p>blockquote
after</p>
</blockquote>
</div>
<div class="markdown-alert markdown-alert-important"><i class="fa fa-circle-exclamation"></i>
<p class="markdown-alert-title">Important</p>
<blockquote>
<p>multi line</p>
<p>blockquote before</p>
</blockquote>
<p>This is a important alert</p>
</div>
<blockquote>
<p>This is a blockquote with</p>
<div class="markdown-alert markdown-alert-tip"><i class="fa fa-lightbulb"></i>
<p class="markdown-alert-title">Tip</p>
<p>tips inside</p>
</div>
</blockquote>
<div class="markdown-alert markdown-alert-warning"><i class="fa fa-triangle-exclamation"></i>
<p class="markdown-alert-title">Warning</p>
<pre><code class="language-js">console.log(&#39;nested alert&#39;)
</code></pre>
<div class="markdown-alert markdown-alert-caution"><i class="fa fa-bolt"></i>
<p class="markdown-alert-title">Caution</p>
<ul>
<li>This is</li>
<li>a <code>caution</code> alert</li>
</ul>
</div>
</div>
"
`;

exports[`should render default alerts 1`] = `
"<h1>Example</h1>
<div class="markdown-alert markdown-alert-note"><i class="fa fa-note-sticky"></i>
<p class="markdown-alert-title">Note</p>
<p>Highlights information that users should take into account, even when skimming.</p>
</div>
<div class="markdown-alert markdown-alert-tip"><i class="fa fa-lightbulb"></i>
<p class="markdown-alert-title">Tip</p>
<p>Optional information to help a user be more successful.</p>
</div>
<div class="markdown-alert markdown-alert-important"><i class="fa fa-circle-exclamation"></i>
<p class="markdown-alert-title">Important</p>
<p>Crucial information necessary for users to succeed.</p>
</div>
<div class="markdown-alert markdown-alert-warning"><i class="fa fa-triangle-exclamation"></i>
<p class="markdown-alert-title">Warning</p>
<p>Critical content demanding immediate user attention due to potential risks.</p>
</div>
<div class="markdown-alert markdown-alert-caution"><i class="fa fa-bolt"></i>
<p class="markdown-alert-title">Caution</p>
<p>Negative potential consequences of an action.</p>
</div>
"
`;
